refactor: MetricService의 collectMetrics() 메서드에서 전체 지표를 수집하는 로직을 메서드로 추출